# resendbox

./: .gitignore  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vercel.json  vite.config.js  vite.config.ts
api/resend/: [...path].js  [[...path]].js
public/: 404.html  manifest.webmanifest  robots.txt  sitemap.xml  sw.js
scripts/: check-tauri-env.mjs
src/: main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  resend.rs  storage.rs
src/app/: router.tsx
src/app/layout/: app-shell.tsx  sidebar.tsx  topbar.tsx
src/app/providers/: app-provider.tsx
src/components/: empty-state.tsx  language-switcher.tsx  loading-indicator.tsx  logo-mark.tsx  page-transition.tsx
src/components/dashboard/: activity-card.tsx  quick-actions-card.tsx  stat-card.tsx
src/components/emails/: email-compose-form.tsx  email-list.tsx  received-email-detail.tsx  sent-email-detail.tsx
src/components/layout/: site-footer.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx  label.tsx  separator.tsx  skeleton.tsx  switch.tsx  textarea.tsx
src/features/compose/: compose-page.tsx
src/features/dashboard/: dashboard-page.tsx
src/lib/: copy.ts  format.ts  pwa.ts  runtime.ts  seo.ts  site.ts  validators.ts
src/services/: app-bridge.ts
src/types/: app.ts
(+4 files in other folders)
